# pypoc

./: .gitignore  Dockerfile  PYPOC_PLUGIN_MIGRATION_GUIDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: container.yml  pytest.yml  release.yml
apps/: __init__.py
apps/analytics/: __init__.py  plugin.py  routes.py
apps/notes/: plugin.py  routes.py
examples/deployment/: Dockerfile  README.md  pyproject.toml  wsgi.py
examples/plugins/flask-plugin-analytics/: pyproject.toml
examples/plugins/flask-plugin-analytics/src/flask_plugin_analytics/: plugin.py
examples/plugins/flask-plugin-analytics/src/flask_plugin_analytics/templates/analytics/: index.html
examples/plugins/flask-plugin-notes/: pyproject.toml
examples/plugins/flask-plugin-notes/src/flask_plugin_notes/: __init__.py  plugin.py
examples/plugins/flask-plugin-notes/src/flask_plugin_notes/templates/notes/: index.html
flask_plugin_platform/: __init__.py  app.py  cli.py  config.py  middleware.py  registry.py  versioning.py
flask_plugin_platform/static/: platform.css
flask_plugin_platform/templates/: about.html  base.html  index.html
host/: __init__.py  app.py  config.py  registry.py
host/templates/: index.html
packaging/: platform-server.spec
scripts/: build_executable.sh  run_dev.sh
shared/: __init__.py
shared/models/: __init__.py
shared/types/: __init__.py
tests/: test_app.py  test_registry.py
tests/fixtures/local_plugins/: __init__.py
tests/fixtures/local_plugins/sample/: __init__.py  plugin.py
