[project]
name = "flask-plugin-platform"
version = "0.1.0"
description = "A lightweight Flask platform with dynamically discoverable self-registering apps."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=22.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[project.scripts]
platform-dev = "host.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "host", "shared"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
